Update_unmodified_report_model02.html

--- a/report_test.html
+++ b/report_test.html
@@ -193,7 +193,7 @@
             </tr>
             <tr>
                 <th>Clinical Notes</th>
-                    <td>colspan="6"></td>
+                    <td>colspan="6"</td>
                 </td>
             </tr>
             <tr>
@@ -245,32 +245,32 @@
                     <td rowspan="4"></td>
                     <td>
                         <th>TREATMENT PLAN</th>
-                        <tr>
+                        <td>
                             - Blood Transfusions<br>
                             - Folic Acid Supplements<br>
                             - Stem Cell Transplant (Bone Marrow Transplant)<br>
-                        </tr>
+                        </td>
                     </td>
                 </tr>
                 <tr>
                     <td>
                         <th>GENETIC CONSOLING</th>
-                        <tr>
+                        <td>
                            - Explanation<br>
                            - Risk Assessment and Carrier Status<br>
                            - Carrier Testing<br>
                            - Preimplantation Genetic Diagnosis<br>
-                        </tr>
+                        </td>
                     </td>
                 </tr>
                 <tr>
                     <td>
                         <th>SURVEILLANCE</th>
-                        <tr>
+                        <td>
                             - Regular Blood Counts (CBC)<br>
                             - Serum Ferritin<br>
                             - Electrocardiogram (ECG) and Echocardiogram<br>
-                        </tr>
+                        </td>
                     </td>
                 </tr>
             </tbody>
