Update_unmodified_report_model03.html

--- a/report_test.html
+++ b/report_test.html
@@ -123,7 +123,7 @@
 
     <div class="header">
 
-#png_logo
+#pnglogo
         <div class="logo">Organization Logo</div>
         <div><strong>Technical Report</strong></div>
     </div>
@@ -149,7 +149,7 @@
         </div>
     </div>
 
-      <div class="section">
+      <div class="header">
          <div class="details-grid">
             <div>
                 <div class="logo">Laboratory Logo</div>
