Correct clinical note title

--- a/report/report_test02.html
+++ b/report/report_test02.html
@@ -219,7 +219,7 @@
                 </td>
             </tr>
             <tr>
-                <th>Clinical Notes</th>
+                <th>CLINICAL NOTES</th>
                 <td colspan="6"></td>
             </tr>
             <tr>
