--- a/output/patient_report.html
+++ b/output/patient_report.html
@@ -216,7 +216,7 @@
                 </td>
             </tr>
             <tr>
-                <th>Clinical Notes</th>
+                <th>CLINICAL NOTES</th>
                 <td colspan="6"></td>
             </tr>
             <tr>
